# SpanishChatBot

./: .gitignore  README.md  pyproject.toml
src/spanishchatbot/: main.py
